--- a/pythonanywhere/templates/both_notes.html
+++ b/pythonanywhere/templates/both_notes.html
@@ -98,6 +98,8 @@ body {
             padding: 10px 0;
             text-align: center;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+            z-index: 1000;
+            position: relative;
         }
 
         .mobile-sub-header a {
