--- a/pythonanywhere/templates/index.html
+++ b/pythonanywhere/templates/index.html
@@ -1377,7 +1377,7 @@
         /* keep display none by default if your JS hides/shows them */
         display: none;
         position: fixed;
-        top: 0;
+        top: 97px;
         right: 0;
         height: 100vh;
         width: 50%;
@@ -1469,7 +1469,7 @@
 
         /* Bigger editor area: expand to available viewport so user gets a "page" feel */
         .rich-text-editor {
-            max-height: calc(100vh - 180px);
+            max-height: calc(50vh - 180px);
             padding: 16px;
             font-size: 18px;
             line-height: 1.5;
