--- a/pythonanywhere/templates/trello.html
+++ b/pythonanywhere/templates/trello.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Future Notes — Trello</title>
+    <meta name="theme-color" content="#2c2c2c">
+    <title>Future Notes - Trello</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="static/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="static/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="static/favicon-16x16.png">
+    <link rel="favicon" type="image/x-icon" href="static/favicon.ico">
+    <link rel="manifest" href="static/site.webmanifest">
     <script src="/static/js/loader.js"></script>
     <script src="/static/custom-alert.js"></script>
     <script src="/static/admin.js"></script>
